# k8s-p11-plugin

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  conf.yaml  kube.yaml
proto/: api.proto
src/: main.rs  uds.rs
